# Copyright 2023 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mephistio-etcd"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0.75"
backon = "0.4.1"
crossbeam = "0.8.2"
mephisto-raft = { path = "../raft", features = ["service"] }
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tonic = "0.10.2"
tracing = "0.1.40"

[dev-dependencies]
rayon = "1.7.0"
tracing-subscriber = "0.3.17"

[build-dependencies]
tonic-build = "0.10.2"
protobuf-src = "1.1.0"
